[package]
name = "date"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/date"
homepage = "https://github.com/stainless-steel/date"
description = "The library provides the notion of a calendar date."

[dependencies]
time = "0.0.3"
