[package]
name = "date"
version = "0.1.3"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/date"
homepage = "https://github.com/stainless-steel/date"
description = "The library provides a notion of the calendar date."

[dependencies]
time = "0.1"
